--- a/client/src/App.css
+++ b/client/src/App.css
@@ -32,9 +32,6 @@
   margin: 0px;
   top: 0px;
   left: 0px;
-  width: 1920px;
-  height: 2065px;
-  /* UI Properties */
   background: var(--softwhite) 0% 0% no-repeat padding-box;
   background: #F8F7F2 0% 0% no-repeat padding-box;
   opacity: 1;
@@ -43,5 +40,6 @@
 .container {
   margin-left: 336px;
   margin-right: 337px;
+  min-height: 100vh;
 }
 
