--- a/client/src/pages/MyProfile/MyProfile.css
+++ b/client/src/pages/MyProfile/MyProfile.css
@@ -1,41 +1,50 @@
-.login-container{
-    display: flex;
+.register-wrapper {
+    display: flex; 
     margin-top: 2rem;
     text-align: left;
 }
 
-.login-text-box{
-    width: 70%;
+.register-textbox {
+    width: 35%;
     padding-right: 4rem;
 }
 
-.login-text-box > h1 {
-    font-size: 42px;
+h1 {
+    font-size: 46px;
     color: #F0972A;
     font-family: Roboto Slab;
 }
 
-.login-text-box > p {
-    font-size: 18px;
-    color: #A5A5A5;
+.register-textbox > p {
     font-family: Roboto Slab;
+    font-size: 20px;
+    color: #A5A5A5;
 }
 
-.login-form {
-    width: 45%;
-    margin: 0.5rem 3rem;
+.register-form {
+    width: 65%;
+    margin-left: 4rem;
+    margin-top: 3rem;
+    display: flex;
+    flex-wrap: wrap;
+    align-content: flex-start;
+}
+
+.form-names {
     display: flex;
     flex-direction: column;
+    width: 45%;
+    margin-bottom: 1rem;
 }
 
-.login-form > label {
+.form-names > label {
     font-family: Roboto Slab;
     font-weight: bolder;
     margin-bottom: 0.7rem;
     color: #F0972A;
 }
 
-.login-form > input {
+.form-names > input {
     padding: 5px;
     height: 1.7rem;
     border-radius: 5px;
@@ -43,14 +52,14 @@
     font-weight: bold;
     border: 1px solid #A5A5A5;
     background: #F0EFEA;
+    width: 85%;
     color: #626262;
-    margin-bottom: 1rem;
 }
 
-.login-form > button {
-    font: normal normal 700 16px/40px Roboto;
-    width: 45%;
-    height: 2.5rem;
+.register-form > button {
+    font: normal normal 700 16px/45px Roboto;
+    width: 28%;
+    height: 2.7rem;
     margin-top: 2rem;
     box-shadow: 0px 3px 6px #00000029;
     border: 0;
@@ -59,4 +68,12 @@
     background: #96BB36 0% 0% no-repeat padding-box;
     font-size: 16px;
     color: #FFFFFF;
+}
+
+img {
+    top: 331px;
+    left: 361px;
+    width: 123px;
+    height: 123px;
+    box-shadow: 0px 3px 6px #00000029;
 }
