--- a/client/src/pages/MyProfile/MyProfile.css
+++ b/client/src/pages/MyProfile/MyProfile.css
@@ -1,11 +1,5 @@
-.register-wrapper {
-    display: flex; 
-    margin-top: 2rem;
-    text-align: left;
-}
-
-.register-textbox {
-    width: 35%;
+.profile-textbox {
+    width: 20%;
     padding-right: 4rem;
 }
 
@@ -15,36 +9,48 @@ h1 {
     font-family: Roboto Slab;
 }
 
-.register-textbox > p {
+.profile-textbox > p {
     font-family: Roboto Slab;
     font-size: 20px;
     color: #A5A5A5;
 }
 
-.register-form {
-    width: 65%;
-    margin-left: 4rem;
-    margin-top: 3rem;
+.profile-info {
     display: flex;
-    flex-wrap: wrap;
-    align-content: flex-start;
+    justify-content: space-between;
+    flex-direction: row;
+    width: 50%;
 }
 
-.form-names {
+.profile-form {
+    width: 100%;
+    margin-top: 3rem;
+    display: flex;
+    text-align: left;
+}
+
+.first-three{
+    width: 100%;
+}
+
+.last-three{
+    width: 100%;
+}
+
+.profile-form-names {
     display: flex;
     flex-direction: column;
-    width: 45%;
     margin-bottom: 1rem;
 }
 
-.form-names > label {
+.profile-form-names > label {
     font-family: Roboto Slab;
     font-weight: bolder;
     margin-bottom: 0.7rem;
     color: #F0972A;
 }
 
-.form-names > input {
+.profile-form-names > input {
     padding: 5px;
     height: 1.7rem;
     border-radius: 5px;
@@ -56,10 +62,10 @@ h1 {
     color: #626262;
 }
 
-.register-form > button {
-    font: normal normal 700 16px/45px Roboto;
-    width: 28%;
-    height: 2.7rem;
+.first-three > button {
+    font: normal normal 700 16px/40px Roboto;
+    width: 40%;
+    height: 2.5rem;
     margin-top: 2rem;
     box-shadow: 0px 3px 6px #00000029;
     border: 0;
