--- a/client/src/components/UI/Modal/Modal.css
+++ b/client/src/components/UI/Modal/Modal.css
@@ -1,6 +1,7 @@
 .modal {
   position: fixed;
-  display: block;
+  width: 100%;
+  height: 100%;
   left: 0;
   top: 0;
   right: 0;
@@ -8,7 +9,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  /* filter: blur(2px); */
+  backdrop-filter: blur(5px);
 }
 
 img {
