--- a/client/src/components/UI/Modal/Modal.css
+++ b/client/src/components/UI/Modal/Modal.css
@@ -12,8 +12,15 @@
   backdrop-filter: blur(5px);
 }
 
-img {
-  height: 215px;
+.modal-container {
+  box-shadow: 0px 10px 20px #00000012;
+  border: 2px solid #D8D8D8;
+  border-radius: 5px; 
+}
+
+.modal-img {
+  width: 290px;
+  height: 200px;
   box-shadow: 0px 3px 6px #00000029;
 }
 
@@ -29,11 +36,20 @@ img {
   flex-direction: row;
   margin-left: 1rem;
   margin-right: 1rem;
+  
 }
 
 .modal-header {
-padding: 10px;
+margin-left: 1rem;
+display: flex;
+justify-content: space-between;
+margin-right: 1rem;
 }
+
+.modal-header > h2{
+  color: orange
+}
+
 
 .modal-left {
   text-align: left;
@@ -86,3 +102,13 @@ padding: 10px;
   justify-content: space-between;
   flex-direction: row;
 }
+
+.category-info > h5{
+  color: #96bb36;
+}
+
+.recipe-details > p{
+  color: #96bb36;
+  margin: 0;
+}
+
