--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -40,6 +40,7 @@
   color: var(--midgrey);
   text-transform: var(--unnamed-text-transform-uppercase);
 }
+
 .unnamed-character-style-2 {
   font-family: var(--unnamed-font-family-roboto-slab);
   font-style: var(--unnamed-font-style-normal);
@@ -49,6 +50,7 @@
   letter-spacing: var(--unnamed-character-spacing-0);
   color: var(--midgrey);
 }
+
 .unnamed-character-style-3 {
   font-family: var(--unnamed-font-family-roboto);
   font-style: var(--unnamed-font-style-normal);
@@ -58,6 +60,7 @@
   letter-spacing: var(--unnamed-character-spacing-0);
   color: var(--midgrey);
 }
+
 .unnamed-character-style-4 {
   font-family: var(--unnamed-font-family-roboto-slab);
   font-style: var(--unnamed-font-style-normal);
@@ -67,6 +70,7 @@
   letter-spacing: var(--unnamed-character-spacing-0);
   color: var(--orange);
 }
+
 .unnamed-character-style-5 {
   font-family: var(--unnamed-font-family-roboto-slab);
   font-style: var(--unnamed-font-style-normal);
@@ -98,7 +102,7 @@
   color: #626262;
   font-weight: 700;
   margin-bottom: 1rem;
-  
+
 }
 
 .nav-logo-food {
@@ -111,14 +115,12 @@
   font-size: 0.9rem;
   font-family: 'Roboto Slab';
   font-weight: 600;
-  display:inline-block;
+  display: inline-block;
   margin-top: 12px;
 }
 
 .nav-links a {
-  font: var(--unnamed-font-style-normal) normal var(--unnamed-font-weight-bold)
-    var(--unnamed-font-size-18) / var(--unnamed-line-spacing-24)
-    var(--unnamed-font-family-roboto);
+  font: var(--unnamed-font-style-normal) normal var(--unnamed-font-weight-bold) var(--unnamed-font-size-18) / var(--unnamed-line-spacing-24) var(--unnamed-font-family-roboto);
   letter-spacing: var(--unnamed-character-spacing-0);
   color: var(--midgrey);
   text-align: left;
@@ -129,6 +131,7 @@
   text-decoration: none;
   opacity: 1;
 }
+
 .nav-links span {
   margin-left: 0.5rem;
 }
@@ -142,8 +145,7 @@
 }
 
 .login-button {
-  font: var(--unnamed-font-style-normal) normal 900 16px/19px
-    var(--unnamed-font-family-roboto);
+  font: var(--unnamed-font-style-normal) normal 900 16px/19px var(--unnamed-font-family-roboto);
   letter-spacing: var(--unnamed-character-spacing-0);
   border-radius: 5px;
   color: #a5a5a5;
@@ -174,4 +176,3 @@
 .register-button:hover {
   cursor: pointer;
 }
-
