--- a/client/src/components/UI/Modal/Modal.css
+++ b/client/src/components/UI/Modal/Modal.css
@@ -9,13 +9,14 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  backdrop-filter: blur(5px);
+  backdrop-filter: blur(7px);
+  font-family: Roboto Slab;
 }
 
 .modal-container {
   box-shadow: 0px 10px 20px #00000012;
   border: 2px solid #D8D8D8;
-  border-radius: 5px; 
+  border-radius: 5px;
 }
 
 .modal-img {
@@ -30,23 +31,23 @@
   background-color: white;
 }
 
-.modal-body{
+.modal-body {
   display: flex;
   justify-content: space-between;
   flex-direction: row;
   margin-left: 1rem;
   margin-right: 1rem;
-  
+
 }
 
 .modal-header {
-margin-left: 1rem;
-display: flex;
-justify-content: space-between;
-margin-right: 1rem;
+  margin-left: 1rem;
+  display: flex;
+  justify-content: space-between;
+  margin-right: 1rem;
 }
 
-.modal-header > h2{
+.modal-header>h2 {
   color: orange
 }
 
@@ -87,14 +88,13 @@ margin-right: 1rem;
 }
 
 .type-recipe {
-  font: normal normal normal 12px/16px Roboto Slab;
+  font: normal normal normal 11px/16px Roboto Slab;
   border-radius: 20px;
   background-color: #96bb36;
   color: rgb(255, 255, 255);
-
-  padding: 0.2rem 0.7rem;
-  height: 6%;
-    margin-top: 1.1rem;
+  padding: 0.2rem 0.8rem;
+  height: 5%;
+  margin-top: 1.2rem;
 }
 
 .category-info {
@@ -103,12 +103,11 @@ margin-right: 1rem;
   flex-direction: row;
 }
 
-.category-info > h5{
+.category-info>h4 {
   color: #96bb36;
 }
 
-.recipe-details > p{
+.recipe-details>h4 {
   color: #96bb36;
   margin: 0;
 }
-
