--- a/client/src/pages/MyRecipes/MyRecipes.css
+++ b/client/src/pages/MyRecipes/MyRecipes.css
@@ -19,6 +19,18 @@ th {
 
 .table-info {
     background-color: white;
+    height: 3.5rem;
+}
+
+.table-info > td {
     border-radius: 5px;
-    margin-bottom: 1rem;
+}
+
+.my-recipes-category{
+    background: var(--green) 0% 0% no-repeat padding-box;
+    background: #96BB36 0% 0% no-repeat padding-box;
+    border-radius: 5px;
+    opacity: 1;
+    width: 40%;
+    
 }
