--- a/client/src/pages/AddRecipe/AddRecipe.css
+++ b/client/src/pages/AddRecipe/AddRecipe.css
@@ -44,6 +44,22 @@
     color: #F0972A;
 }
 
+.img-info > img {
+    width: 90%;
+}
+
+.img-info > label {
+    border: 1px solid #A5A5A5;
+    display: block;
+    width: 180px;
+    font-family: Roboto Slab;
+    height: 7%;
+    color: grey;
+    text-align: center;
+    padding-top: 4px;
+    border-radius: 5px;
+}
+
 .form-names {
     display: flex;
     flex-direction: column;
