--- a/client/src/pages/MyProfile/MyProfile.css
+++ b/client/src/pages/MyProfile/MyProfile.css
@@ -3,6 +3,23 @@
     padding-right: 4rem;
 }
 
+.profile-textbox > img {
+    width: 90%;
+    border-radius: 50%;
+}
+
+.profile-textbox > label {
+    border: 1px solid #A5A5A5;
+    display: block;
+    width: 180px;
+    font-family: Roboto Slab;
+    height: 7%;
+    color: grey;
+    text-align: center;
+    padding-top: 4px;
+    border-radius: 5px;
+}
+
 h1 {
     font-size: 46px;
     color: #F0972A;
