--- a/client/src/pages/AddRecipe/AddRecipe.css
+++ b/client/src/pages/AddRecipe/AddRecipe.css
@@ -84,7 +84,7 @@
     font-weight: bold;
     border: 1px solid #A5A5A5;
     background: #F0EFEA;
-    color: #626262;
+    color: grey;
 }
 
 .form-names>select {
@@ -96,7 +96,7 @@
     font-weight: bold;
     border: 1px solid #A5A5A5;
     background: #F0EFEA;
-    color: #626262;
+    color: lightgrey;
 }
 
 .form-info>button {
